# CortexStratum

./: .env.example  .gitignore  .mem0.md  AGENTS.md  ARCHITECTURE.md  ASSESSMENT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  DEPENDENCIES.md  MILESTONES.md  ONE-CLICK.cmd  QUICKSTART.md  README.md  REFERENCES.md  dashboard.html  install.ps1  install.sh  model-study-guide.md  opencode-container-server.iss  opencode.json  opencode.json.bak2  package-lock.json  package.json  pyproject.toml  requirements-full.txt  requirements.txt  setup.ps1
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: create-issues.ps1
.opencode/: active-skills.json  agents.md  opencode.jsonc
cad-module/: __init__.py  cad_exporter.py  cad_validator.py  cad_wrapper.py  fea_analyzer.py  project_verifier.py
data/: README.md  blind-answer-key.json  blind-benchmark-results.json  blind-my-answers.json  blind-questions-only.json  blind-questions.json  commitment-registry.json  compact-last.json  compact-sessions.db  compact-velocity.json  consultation-cr-20260715-134730.json  dcp-demo-validation.txt  decision-registry.json  doc-index.json  error-registry.json  flash-benchmark-results.json  free-provider-template.json  fresh-blind-answers.json  fresh-blind-questions.json  global-projects-memory.json  goal-registry.json  identity-evolution-log.json  identity-schema.json  mcp-server-test-results.json  orchestration-research.json  pedagogy-profile.json  provider-signup-guide.md  sandbox-log.json  synonyms.json  (+7 more)
(+305 files in other folders)
